force-app/main/default/objects/Case/fields/EPO_Accused3_Non_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Accused3_Non_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accused3 Non-Employee</label>
    <referenceTo>NonEmployee__c</referenceTo>
    <relationshipLabel>Cases (Complainant5 Non-Employee)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>