force-app/main/default/objects/Case/fields/EPO_Accused4_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Accused4_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accused4 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4Vi0</relationshipName>
    <type>Lookup</type>
</CustomField>