force-app/main/default/objects/Case/fields/EPO_Alleged_Violation__c.field-meta.xml
<CustomField>
    <fullName>EPO_Alleged_Violation__c</fullName>
    <label>Alleged Violation</label>
    <picklist>
        <picklistValues>
            <fullName>Plan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Policy</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Rules</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>