force-app/main/default/objects/Case/fields/EPO_Case_Age_Tracker__c.field-meta.xml
<CustomField>
    <fullName>EPO_Case_Age_Tracker__c</fullName>
    <formula>TEXT(TODAY () - EPO_Date_Entered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPO Case Age Tracker</label>
    <type>Text</type>
</CustomField>