force-app/main/default/objects/Case/fields/EPO_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Case_Closed_Date__c</fullName>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>