force-app/main/default/objects/Case/fields/EPO_Case_Past_Owner__c.field-meta.xml
<CustomField>
    <fullName>EPO_Case_Past_Owner__c</fullName>
    <label>EPO Case Past Owner</label>
    <length>60</length>
    <type>Text</type>
</CustomField>