force-app/main/default/objects/Case/fields/EPO_Category__c.field-meta.xml
<CustomField>
    <fullName>EPO_Category__c</fullName>
    <label>EPO Category</label>
    <picklist>
        <picklistValues>
            <fullName>Pay</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Overtime</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Transfer</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Discipline</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CBA</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Unauthorized Contact</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Layoff_Recall</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Conflict of Interest</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hiring</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Conflict</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Demotion</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Displacement</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EEO</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Ethics</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Harassment</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Political</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Retaliation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Time &amp; Attendance</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Vacation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Work Place Violence</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Work out of classification</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Discrimination</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>