force-app/main/default/objects/Case/fields/EPO_Cmplnt_Employee_Original_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Cmplnt_Employee_Original_Hire_Date__c</fullName>
    <formula>EPO_Complaint_Employee__r.OriginalHireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Employee Original Hire Date</label>
    <type>Date</type>
</CustomField>