force-app/main/default/objects/Case/fields/EPO_Complainant2_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Complainant2_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant2 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>