force-app/main/default/objects/Case/fields/EPO_Complainant3_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Complainant3_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant3 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>