force-app/main/default/objects/Case/fields/EPO_Complainant3_Non_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Complainant3_Non_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant3 Non-Employee</label>
    <referenceTo>NonEmployee__c</referenceTo>
    <relationshipLabel>Cases (Complainant3 Non-Employee)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>