force-app/main/default/objects/Case/fields/EPO_Complainant4_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Complainant4_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant4 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases9</relationshipName>
    <type>Lookup</type>
</CustomField>