force-app/main/default/objects/Case/fields/EPO_Complaint_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Complaint_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>