force-app/main/default/objects/Case/fields/EPO_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>EPO_Date_Entered__c</fullName>
    <label>EPO Receive Date</label>
    <type>Date</type>
</CustomField>