force-app/main/default/objects/Case/fields/EPO_Depoartment__c.field-meta.xml
<CustomField>
    <fullName>EPO_Depoartment__c</fullName>
    <label>Job Code Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>