force-app/main/default/objects/Case/fields/EPO_Finding__c.field-meta.xml
<CustomField>
    <fullName>EPO_Finding__c</fullName>
    <label>EPO Finding</label>
    <picklist>
        <picklistValues>
            <fullName>No Investigation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Not Sustained</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sustained</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Referred</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sust in Part</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>