force-app/main/default/objects/Case/fields/EPO_Incident_Date_1__c.field-meta.xml
<CustomField>
    <fullName>EPO_Incident_Date_1__c</fullName>
    <label>EPO Incident Date #1</label>
    <type>Date</type>
</CustomField>