force-app/main/default/objects/Case/fields/EPO_Incident_Date_2__c.field-meta.xml
<CustomField>
    <fullName>EPO_Incident_Date_2__c</fullName>
    <label>EPO Incident Date #2</label>
    <type>Date</type>
</CustomField>