force-app/main/default/objects/Case/fields/EPO_Incident_Date_3__c.field-meta.xml
<CustomField>
    <fullName>EPO_Incident_Date_3__c</fullName>
    <label>EPO Incident Date #3</label>
    <type>Date</type>
</CustomField>