force-app/main/default/objects/Case/fields/EPO_Incident_Other__c.field-meta.xml
<CustomField>
    <fullName>EPO_Incident_Other__c</fullName>
    <label>Case Origin Other - Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>