force-app/main/default/objects/Case/fields/EPO_INV__c.field-meta.xml
<CustomField>
    <fullName>EPO_INV__c</fullName>
    <label>EPO INV #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>