force-app/main/default/objects/Case/fields/EPO_Report__c.field-meta.xml
<CustomField>
    <fullName>EPO_Report__c</fullName>
    <label>EPO Report</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>N/A</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Memo to Close</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>