force-app/main/default/objects/Case/fields/EPO_Report_Date1__c.field-meta.xml
<CustomField>
    <fullName>EPO_Report_Date1__c</fullName>
    <label>EPO Report Date</label>
    <type>Date</type>
</CustomField>