force-app/main/default/objects/Case/fields/EPO_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Report_Date__c</fullName>
    <label>Case Entry Date</label>
    <type>Date</type>
</CustomField>