force-app/main/default/objects/Case/fields/EPO_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Response_Date__c</fullName>
    <formula>EPO_Report_Date1__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Response Date</label>
    <type>Date</type>
</CustomField>