force-app/main/default/objects/Case/fields/EPO_Witness2_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Witness2_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness2 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4Vgs</relationshipName>
    <type>Lookup</type>
</CustomField>