force-app/main/default/objects/Case/fields/EPO_Witness3_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Witness3_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness3 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4Vh2</relationshipName>
    <type>Lookup</type>
</CustomField>