force-app/main/default/objects/Case/fields/ExpectedGrade__c.field-meta.xml
<CustomField>
    <fullName>ExpectedGrade__c</fullName>
    <label>Expected Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>