force-app/main/default/objects/Case/fields/ExpectedLastDay__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLastDay__c</fullName>
    <label>Expected Last Day</label>
    <type>Date</type>
</CustomField>