force-app/main/default/objects/Case/fields/ExpectedRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRate__c</fullName>
    <label>Expected Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>