force-app/main/default/objects/Case/fields/ExpectedStep__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStep__c</fullName>
    <label>Expected Step</label>
    <length>10</length>
    <type>Text</type>
</CustomField>