force-app/main/default/objects/Case/fields/File_Description__c.field-meta.xml
<CustomField>
    <fullName>File_Description__c</fullName>
    <description>Compliance: Paired with the collateral path and meant to show where the documents are stored.</description>
    <label>File Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>