force-app/main/default/objects/Case/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <description>Compliance: Sits inside of Type Of PHI involved in Breach</description>
    <inlineHelpText>Please select all that apply.</inlineHelpText>
    <label>Financial</label>
    <picklist>
        <picklistValues>
            <fullName>Claims Information</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Credit Card/ Bank Account Number</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other Financial Information</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>MultiselectPicklist</type>
</CustomField>