force-app/main/default/objects/Case/fields/Financial_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Financial_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial</label>
    <type>Checkbox</type>
</CustomField>