force-app/main/default/objects/Case/fields/First_Level_Approval__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Level Approval</label>
    <type>Checkbox</type>
</CustomField>