force-app/main/default/objects/Case/fields/FirstLevelNonUnionSupervisor__c.field-meta.xml
<CustomField>
    <fullName>FirstLevelNonUnionSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Level Non-Union Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_1_NU_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>