force-app/main/default/objects/Case/fields/Gender_New__c.field-meta.xml
<CustomField>
    <fullName>Gender_New__c</fullName>
    <label>Gender</label>
    <length>1</length>
    <type>Text</type>
</CustomField>