force-app/main/default/objects/Case/fields/Government_Contract__c.field-meta.xml
<CustomField>
    <fullName>Government_Contract__c</fullName>
    <description>Compliance Historical Data</description>
    <label>Government Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>