force-app/main/default/objects/Case/fields/Grant_Deny__c.field-meta.xml
<CustomField>
    <fullName>Grant_Deny__c</fullName>
    <label>Grant/Deny</label>
    <picklist>
        <picklistValues>
            <fullName>Grant</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Deny</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Withdrawn</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>