force-app/main/default/objects/Case/fields/Grant_total_amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_total_amount__c</fullName>
    <label>Grant total amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>