force-app/main/default/objects/Case/fields/Grievance_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Case_Subject__c</fullName>
    <formula>ContactName__c &amp; &quot;-&quot;  &amp;  TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grievance Case Subject</label>
    <type>Text</type>
</CustomField>