force-app/main/default/objects/Case/fields/Grievance_Date__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Date__c</fullName>
    <label>Grievance Date</label>
    <type>Date</type>
</CustomField>