force-app/main/default/objects/Case/fields/Grievance_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Outcome__c</fullName>
    <description>Outcome of the grievance</description>
    <label>Grievance Outcome</label>
    <picklist>
        <picklistValues>
            <fullName>Granted in part</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Denied</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Denied in part</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Granted</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>