force-app/main/default/objects/Case/fields/Grievance_Step3_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Step3_Additional_Information__c</fullName>
    <label>Grievance Step3 Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>