force-app/main/default/objects/Case/fields/Grievance_Union_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Union_Representative_Name__c</fullName>
    <label>Grievance Union Representative Name</label>
    <type>TextArea</type>
</CustomField>