force-app/main/default/objects/Case/fields/GrievanceCBA__c.field-meta.xml
<CustomField>
    <fullName>GrievanceCBA__c</fullName>
    <label>CBA</label>
    <picklist>
        <picklistValues>
            <fullName>AFSCME</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>COUPE</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>FOP</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>HOUSE STAFF</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>NNOC</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Operating Engineers</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>RWDSU</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Teamsters Local 700</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Teamsters Local 743</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SEIU Local 1 Fireman &amp; Oilers</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SEIU Local 20</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SEIU 73</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SEIU</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>