force-app/main/default/objects/Case/fields/GrievanceCBAArticle__c.field-meta.xml
<CustomField>
    <fullName>GrievanceCBAArticle__c</fullName>
    <label>CBA Article</label>
    <picklist>
        <controllingField>GrievanceCBA__c</controllingField>
        <picklistValues>
            <fullName>I - Recognition</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>I - Recognition of Bargaining Agent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>I - Recognition and Association Security</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - County and Association Rights and Obligations</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - County and NNOC Rights and Obligations</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - County Authority</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - Declaration of Purpose &amp; Authority of the County</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - Declaration of Rights</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>II - Management Rights</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>III - Hours of Work and Overtime</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>III - Housestaff Physicians&apos; Salaries and Hours</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>III - Personnel Files</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IV - Grievance Procedure</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IV - Paid Leaves and Leaves of Absence</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IV - Rates of Pay</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IV - Seniority</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IV - Union Security</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IX - Additional Benefits</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IX - Grievance Procedure and Discipline</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IX - Leaves</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IX - Reduction in Workforce, Layoff and Recall</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>IX - Sick Leave</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>V - Continuity of Operation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>V - Grievance Procedure</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>V - Other Benefits</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>V - Rate of Pay</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>V - Seniority</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>VI - Holidays</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>VI - Hours of Work and Overtime</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>VI - Insurance</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>