force-app/main/default/objects/Case/fields/Grievant_Non_Employee__c.field-meta.xml
<CustomField>
    <fullName>Grievant_Non_Employee__c</fullName>
    <label>Grievant Non Employee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>