force-app/main/default/objects/Case/fields/Guidance_Date_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Date_of_Education__c</fullName>
    <label>Guidance Date of Education</label>
    <type>Date</type>
</CustomField>