force-app/main/default/objects/Case/fields/Guidance_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Number_of_Attendees__c</fullName>
    <label>Guidance Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>