force-app/main/default/objects/Case/fields/Guidance_Presenters__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Presenters__c</fullName>
    <label>Guidance Presenters</label>
    <type>TextArea</type>
</CustomField>