force-app/main/default/objects/Case/fields/Guidance_Title__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Title__c</fullName>
    <label>Guidance Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>