force-app/main/default/objects/Case/fields/HasAgreement__c.field-meta.xml
<CustomField>
    <fullName>HasAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Agreement</label>
    <type>Checkbox</type>
</CustomField>