force-app/main/default/objects/Case/fields/Hearing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer__c</fullName>
    <description>Indicate the Hearing Officer</description>
    <label>Hearing Officer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>