force-app/main/default/objects/Case/fields/HIS_Access_Terminated__c.field-meta.xml
<CustomField>
    <fullName>HIS_Access_Terminated__c</fullName>
    <label>HIS Access Terminated</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Not Applicable</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>