force-app/main/default/objects/Case/fields/HourlyRate__c.field-meta.xml
<CustomField>
    <fullName>HourlyRate__c</fullName>
    <label>Hourly Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>