force-app/main/default/objects/Case/fields/HR_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Approved_Date__c</fullName>
    <description>This will give you the date that HR approves a Tuition Reimbursement case</description>
    <formula>IF(ISPICKVAL(Status, &#39;Part 1 Closed&#39;),  NOW() , Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Approved Date</label>
    <type>Date</type>
</CustomField>