force-app/main/default/objects/Case/fields/HR_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Notification_Date__c</fullName>
    <label>HR Notification Date</label>
    <type>DateTime</type>
</CustomField>