force-app/main/default/objects/Case/fields/HR_Reponse__c.field-meta.xml
<CustomField>
    <fullName>HR_Reponse__c</fullName>
    <label>HR Reponse</label>
    <picklist>
        <picklistValues>
            <fullName>Complete</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Pending</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>N/A</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>