force-app/main/default/objects/Case/fields/ID_Returned__c.field-meta.xml
<CustomField>
    <fullName>ID_Returned__c</fullName>
    <label>ID Returned</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>