force-app/main/default/objects/Case/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to show their Pay Rate or Accrual Case is In Progress</description>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>