force-app/main/default/objects/Case/fields/Individual_Responsible_For_Activity__c.field-meta.xml
<CustomField>
    <fullName>Individual_Responsible_For_Activity__c</fullName>
    <description>Compliance: Associated with Task Creation</description>
    <label>Individual Responsible For Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>