force-app/main/default/objects/Case/fields/Initial_Communication__c.field-meta.xml
<CustomField>
    <fullName>Initial_Communication__c</fullName>
    <label>Initial Communication</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>