force-app/main/default/objects/Case/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <defaultValue>$User.FirstName+ &quot; &quot;+$User.LastName</defaultValue>
    <description>Compliance. meant to grab user at the start of a case and never be changed</description>
    <label>Initiator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>