force-app/main/default/objects/Case/fields/Intermittent_Leave__c.field-meta.xml
<CustomField>
    <fullName>Intermittent_Leave__c</fullName>
    <label>Employee Leave Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>