force-app/main/default/objects/Case/fields/Is_Employee_Reachable__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Reachable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee Reachable</label>
    <type>Checkbox</type>
</CustomField>