force-app/main/default/objects/Case/fields/Is_Retro__c.field-meta.xml
<CustomField>
    <fullName>Is_Retro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retro?</label>
    <type>Checkbox</type>
</CustomField>