force-app/main/default/objects/Case/fields/Is_The_Only_One_Affected__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Only_One_Affected__c</fullName>
    <label>Is The Only One Affected</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>