force-app/main/default/objects/Case/fields/Is_there_an_error__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there an error?</label>
    <type>Checkbox</type>
</CustomField>