force-app/main/default/objects/Case/fields/isLoggedUserCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>isLoggedUserCaseOwner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLoggedUserCaseOwner</label>
    <type>Checkbox</type>
</CustomField>